--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>Astronomy and Physics Club</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -43,7 +43,9 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">Astronomy and Physics Club
+				
+				</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -129,12 +131,9 @@
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>the Astronomy and Physics Club</span>
    				</li>
-   				<li>
-   					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
-   				</li>
+
    				<li>
    					<strong>Job:</strong>
    					<span>Freelancer, Frontend Developer</span>
