--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>We are the Astronomy and Physics Club.</h1>
+	   			<h3>We are the Astronomy and Physics Club.</h3>
 
 	   			<p class="intro-position">
 	   				<span>from Pasadena City COllege</span>
@@ -108,7 +108,8 @@
    		<div class="col-twelve">
 
    			<h5>About</h5>
-   			<h1>Let me introduce myself.</h1>
+   			<
+			>Let me introduce myself.</h1>
 
    			<div class="intro-info">
 
