--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h3>We are the Astronomy and Physics Club.</h3>
+	   			<h2>We are the Astronomy and Physics Club.</h2>
 
 	   			<p class="intro-position">
 	   				<span>from Pasadena City COllege</span>
@@ -371,7 +371,7 @@
 
    		</div>   		
    	</div> <!-- /section-intro--> 
-
+<!-- MY COMENT
    	<div class="row portfolio-content">
 
    		<div class="col-twelve">
