--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<!-- <li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
+						<!-- <li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>-->
+						<li><a class="smoothscroll"  href="#portfolio" title="">Photos</a></li>
 						 
-						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
+						<!-- <li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						-->
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
 						<!-- <li><a href="styles.html" title="">Style Demo</a></li> -->				
@@ -92,7 +92,7 @@
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/AstronomyandPhysicsClubPCC"><i class="fa fa-facebook"></i></a></li>
          <!-- <li><a href=""><i class="fa fa-behance"></i></a></li> -->
-         <li><a href="https://www.twiiter.com/pccastronomy"><i class="fa fa-twitter"></i></a></li>
+         <li><a href="https://www.twitter.com/pccastronomy"><i class="fa fa-twitter"></i></a></li>
          <li><a href="http://www.instagram.com/AstronomyandPhysicsClubPCC"><i class="fa fa-instagram"></i></a></li>
          <!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
          <li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
@@ -199,8 +199,8 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="http://csthorn.com/physics" title="Hire Me" class="button stroke smoothscroll">Join Now!</a>
-   			<a href="https://docs.google.com/document/d/1ZX5Pj8zBY_d_99axz9n5t8RVaze7_oHsskOE3dUL3KA/edit" title="Download CV" class="button button-primary">Tesla Coil Updates</a>
+   			<a href="http://csthorn.com/physics" title="Join Now!" class="button button-primary">Join Now!</a>
+   			<a href="https://docs.google.com/document/d/1ZX5Pj8zBY_d_99axz9n5t8RVaze7_oHsskOE3dUL3KA/edit" title="View Tesla Coil Project Notes" class="button button-primary">Tesla Coil Updates</a>
    		</div>   		
    	</div>
 
@@ -335,9 +335,9 @@
 
 					   <div class="description-box">
 					      <h4>Sign Up Booth</h4>		      
-					      <p>Meet Matt on the left, current project manager.</p>
+					      <p>Meet the members.</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">Club Recruitment</div>			               
 					   </div>
 
 			         <div class="link-box">
