--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>pccastronomyandphysic.club</span>
+   					<span>pccastronomyandphysics.club</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
