--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
      			<ul class="footer-social">        
 			      <li><a href="https://www.facebook.com/AstronomyandPhysicsClubPCC"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="https://www.twiiter.com/pccastronomy"><i class="fa fa-twitter"></i></a></li>
+			      <li><a href="https://www.twitter.com/pccastronomy"><i class="fa fa-twitter"></i></a></li>
 			      <li><a href="http://www.instagram.com/AstronomyandPhysicsClubPCC"><i class="fa fa-instagram"></i></a></li>
 			   </ul> 
 	      		
