--- a/index.html
+++ b/index.html
@@ -142,15 +142,6 @@
 
    			<ul class="info-list">
    				<li>
-   					<strong>Fullname:</strong>
-   					<span>the Astronomy and Physics Club</span>
-   				</li>
-
-   				<li>
-   					<strong>Job:</strong>
-   					<span>Physics Experimentalists, Science Outreach, Student Run Club</span>
-   				</li>
-   				<li>
    					<strong>Website:</strong>
    					<span>pccastronomyandphysics.club</span>
    				</li>
@@ -185,10 +176,6 @@
 				   	<strong>Tesla Coil</strong>
 				   </li>
 
-				 <h3>Sponsors</h3>
-				 <p>Pasadena City College-Office of Student Life - $500<br>
-   			   
-   			   	  Thank you for supporting us!<br></p>
       
 				</ul> <!-- /skill-bars -->		
 
@@ -486,7 +473,7 @@
    			<p>
 	    Room E 311 Tuesdays 12-1pm<br>
             1570 E Colorado Blvd,<br>
-		Pasadena, CA 91106S <br>
+		Pasadena, CA 91106 <br>
             </p>
 
    		</div>
