--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
    			<h3>Events</h3>
    			<p>
-   				Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018<br>
-   				Noche de Ciencias booth hosted by SHPE-Nov. 3,2018<br>
+				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br>
+   				Noche de Ciencias booth hosted by SHPE-Nov. 2,2018<br>
    				More Coming Soon.<br>
    			</p>
    			<h3>Volunteer Opportunities</h3>
@@ -165,10 +165,7 @@
    			<p>	The Tesla Coil<br><br>
 
    				Current Progress:
-   				Secondary Coil 3rd Coat-Friday<br>
-   				Testing Starts -Tuesday <br>
-   				      1. Voltage<br>
-   				      2. Capacitor<br></p>
+   				Tesla Coil Sparked<br></p>
 
 				<ul class="skill-bars">
 				   <li>
