--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<!-- <li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>-->
+						<li><a class="smoothscroll"  href="#join" title="">Join</a></li>-->
 						<li><a class="smoothscroll"  href="#portfolio" title="">Photos</a></li>
 						 
 						<!-- <li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
@@ -179,7 +179,9 @@
    		</div>
 
    	</div>
-
+	    <section id="join">  
+		    <a class="button stroke smoothscroll" href="#join" title=""><h2>Joining the Club</h2></a>
+	   
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="http://csthorn.com/physics" title="Join Now!" class="button button-primary">Join Now!</a>
