--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#join" title="">Join</a></li>-->
+						<li><a class="smoothscroll"  href="#join" title="">Join</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Photos</a></li>
 						 
 						<!-- <li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
@@ -180,7 +180,7 @@
 
    	</div>
 	    <section id="join">  
-		    <a class="button stroke smoothscroll" href="#join" title=""><h2>Joining the Club</h2></a>
+		    <center><a class="button stroke smoothscroll" href="#join" title=""><h2>Joining the Club</h2></a></center>
 	   
    	<div class="row button-section">
    		<div class="col-twelve">
