--- a/index.html
+++ b/index.html
@@ -129,15 +129,16 @@
    			<h3>Events</h3>
    			<p>
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br>
-   				Noche de Ciencias booth hosted by SHPE-Nov. 2,2018<br>
-   				More Coming Soon.<br>
+				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br>
+   				<br>
    			</p>
    			<h3>Volunteer Opportunities</h3>
    			<p>
-   				Noche de Ciencias booth hosted by SHPE-Nov. 2<br>
-   				Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br>
-   				Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16<br>
-   				Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 3<br>
+				<a href="https://drive.google.com/open?id=1zpagJpzPsjBnUTCzxVyFbMmo3AQiG3uY8n7b4slRO70">Noche de Ciencias booth hosted by SHPE-Nov. 2<br></a>
+				Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLSd13Qf_CkBDlj2qlT7ZL9jhuK_BVGzCpWSbzaVtlXBL8aBEVA/viewform?usp=sf_link">Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16<br></a>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLScj6TGPECQUY2TwlA6YTWfgY9QBPgrjifZuzSoRbaSLdByc4Q/viewform?usp=sf_link">Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)</a><br>
+   				<a href="https://docs.google.com/forms/d/e/1FAIpQLScamGJxFOKkcg1rVG-7LE1uikwRNok74QBUCVox35LNaLMaJg/viewform?usp=sf_link">Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14</a><br>
    			</p>
 
    			<ul class="info-list">
