--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
    			<h3>Events</h3>
    			<p>
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br>
-				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br>
+				Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018<br>
    				<br>
    			</p>
    			<h3>Volunteer Opportunities</h3>
