--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
+	   			<h5>Hello, Worlds.</h5>
 	   			 <h1><font face="helvetica" size="11" color = "#ffffff">We are the Astronomy and Physics Club.</h1></font>
 
 	   			<p class="intro-position">
@@ -175,6 +175,16 @@
       
 				</ul> <!-- /skill-bars -->		
 
+			<h3>Officers</h3>
+   			<p>	President - Tommy<br>
+				Vice President - Liberty<br>
+				Treasurer - Kenneth<br>
+				ICC - Crisitian <br>
+				
+				<a href="#">Interested in Running for Office</a><br>
+				<br>
+   				Current Progress:
+   				Tesla Coil Sparked<br></p>
    		</div>
 
    	</div>
