--- a/index.html
+++ b/index.html
@@ -52,11 +52,7 @@
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#join" title="">Join</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Photos</a></li>
-						 
-						<!-- <li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						-->
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<!-- <li><a href="styles.html" title="">Style Demo</a></li> -->				
+						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>				
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -180,11 +176,9 @@
 				Vice President - Liberty<br>
 				Treasurer - Kenneth<br>
 				ICC - Crisitian <br>
-				
-				<a href="#">Interested in Running for Office</a><br>
 				<br>
-   				Current Progress:
-   				Tesla Coil Sparked<br></p>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Interested in Running for Office</a><br>
+				<br>
    		</div>
 
    	</div>
