--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	   			 <h1><font face="helvetica" size="11" color = "#ffffff">We are the Astronomy and Physics Club.</h1></font>
 
 	   			<p class="intro-position">
-	   				<span>from Pasadena City COllege</span>
+	   				<span>from Pasadena City College</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About this Club</a>
@@ -225,9 +225,9 @@
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Sign Up Booth</h3>	     					    
+		     					       <h3 class="folio-title">Cosmology Lab Tour</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  The grassroots way we get our members.
+		     					       	  Bringing students to see research labs. Special thanks to Abigail Crites.
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -324,10 +324,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Sign Up Booth</h4>		      
-					      <p>Meet the members.</p>
+					      <h4>Cosmology Lab Tour</h4>		      
+					      <p>Visiting Research Lab</p>
 
-					      <div class="categories">Club Recruitment</div>			               
+					      <div class="categories">Research</div>			               
 					   </div>
 
 			         <div class="link-box">
