--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
    				<p class="lead">The Astronomy and Physics club at Pasadena City College is dedicated to promoting interests in Physics, Astronomy, Planetary Science, Space Exploration and all related STEM fields. We strive to create an environment that is open to anyone who has an interest in science, regardless of their major. Our goal is to have fun and enjoy learning while working together as a team. There are many opportunities to gain volunteering experience, attend exciting events, and work on projects that allow individuals to experience what it is like to be a scientist or engineer. Our mission is to
-   				enrich the lives of Pasadena City Colleges students, our local community and our selves by providing these resources and experiences.</p>
+   				enrich the lives of Pasadena City College's students, our local community and our selves by providing these resources and experiences.</p>
    			</div>   			
 
    		</div>   		
