--- a/index.html
+++ b/index.html
@@ -167,10 +167,9 @@
 				   	<div class="progress percent85"><span>85%</span></div>
 				   	<strong>Tesla Coil</strong>
 				   </li>
-
-      
 				</ul> <!-- /skill-bars -->		
-
+			<a href="https://docs.google.com/document/d/1l9hb5pbKTgIXuuT3gVf3bmSHl31OsvUwwmf2ZHg4sRo/edit?usp=sharing">Project Proposals</a><br>
+			
 			<h3>Officers</h3>
    			<p>	President - Tommy<br>
 				Vice President - Liberty<br>
