--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				Treasurer - Kenneth<br>
 				ICC - Crisitian <br>
 				<br>
-				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Interested in Running for Office</a><br>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Run for Office</a><br>
 				<br>
    		</div>
 
