--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
    			   Location: E 311 (Physics room next to library)<br></p>
 
    			<h3>Projects</h3>
-   			<p>	The Tesla Coil<br><br>
+   			<p>	
+				<a href="https://docs.google.com/document/d/1l9hb5pbKTgIXuuT3gVf3bmSHl31OsvUwwmf2ZHg4sRo/edit?usp=sharing">Project Proposals</a><br>
+				
+				The Tesla Coil<br><br>
 
    				Current Progress:
    				Tesla Coil Sparked<br></p>
@@ -168,7 +171,7 @@
 				   	<strong>Tesla Coil</strong>
 				   </li>
 				</ul> <!-- /skill-bars -->		
-			<a href="https://docs.google.com/document/d/1l9hb5pbKTgIXuuT3gVf3bmSHl31OsvUwwmf2ZHg4sRo/edit?usp=sharing">Project Proposals</a><br>
+			
 			
 			<h3>Officers</h3>
    			<p>	President - Tommy<br>
