--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
    			<p>	
 				<a href="https://docs.google.com/document/d/1l9hb5pbKTgIXuuT3gVf3bmSHl31OsvUwwmf2ZHg4sRo/edit?usp=sharing">Project Proposals</a><br>
 				<br>
-				The Tesla Coil<br><br>
-
+				<u>The Tesla Coil</u><br>
    				Current Progress:
    				Tesla Coil Sparked<br></p>
 
