--- a/calendar.html
+++ b/calendar.html
@@ -1,4 +1,41 @@
-   	<section id="calendar"> 
+<!DOCTYPE html>
+<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+
+   <!--- basic page needs
+   ================================================== -->
+   <meta charset="utf-8">
+	<title>Astronomy and Physics Club</title>
+	<meta name="description" content="">  
+	<meta name="author" content="">
+
+   <!-- mobile specific metas
+   ================================================== -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+ 	<!-- CSS
+   ================================================== -->
+   <link rel="stylesheet" href="css/base.css">  
+   <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="css/vendor.css">     
+
+   <!-- script
+   ================================================== -->   
+	<script src="js/modernizr.js"></script>
+	<script src="js/pace.min.js"></script>
+
+   <!-- favicons
+	================================================== -->
+	<link rel="icon" type="image/png" href="favicon.png">
+
+</head>
+
+<body id="top">
+   	
+<center>
+<section id="calendar"> 
    	<br>
    	<div class="row section-intro">
    		<div class="col-twelve">
@@ -6,4 +43,6 @@
    			<h1>Meetings & Public Events</h1><br>
    	<!--Google Calender -->
    	<center><iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=pcc.astronomy.and.physics.club%40gmail.com&amp;color=%231B887A&amp;src=1vuo94jeu0mmhh20r46vte4o7o%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ugpcsdc6n5oucf7jh96hk5hlc8%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="600" height="500" frameborder="0" scrolling="no"></iframe></center><br><br></div></div>
-
+   </center>
+   </body>
+   </html>
