--- a/calendar.html
+++ b/calendar.html
@@ -34,15 +34,15 @@
 
 <body id="top">
    	
-<center>
+
 <section id="calendar"> 
    	<br>
    	<div class="row section-intro">
-   		<div class="col-twelve">
+   		<div class="col-twelve"><center>
    	<h5>Astronomy and Physics Club Calendar</h5>
-   			<h1>Meetings & Public Events</h1><br>
+   			<h1>Meetings & Public Events</h1><br>   </center>
    	<!--Google Calender -->
    	<center><iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=pcc.astronomy.and.physics.club%40gmail.com&amp;color=%231B887A&amp;src=1vuo94jeu0mmhh20r46vte4o7o%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ugpcsdc6n5oucf7jh96hk5hlc8%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="600" height="500" frameborder="0" scrolling="no"></iframe></center><br><br></div></div>
-   </center>
+
    </body>
    </html>
