--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Club Collab Events</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Supporting Ship for Noche de Cienciasshu.
+		     					       	  Supporting SHPE for Noche de Cienciasshu.
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
