--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
    	<!--Google Calendar -->
 			<a href="calendar.html"><u>View in Browser</u></a><br>
    	<center><iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=pcc.astronomy.and.physics.club%40gmail.com&amp;color=%231B887A&amp;src=1vuo94jeu0mmhh20r46vte4o7o%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ugpcsdc6n5oucf7jh96hk5hlc8%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="600" height="500" frameborder="0" scrolling="no"></iframe>
-		<pr>Calendar Key: <font color"light blue">Blue: Club meetings & club business. </font> || <font color"red">Red: Club Activities </font>|| <font color"purple">Purple: Local Public Astronomy/Physics Events</font></pr>
+		<pr>Calendar Key: <font color"#66ffcc">Blue: Club meetings & club business. </font> || <font color"#ff0066">Red: Club Activities </font>|| <font color"#6600cc">Purple: Local Public Astronomy/Physics Events</font></pr>
 			</center><br><br>
 			</div>
 		</div>
