--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
    			<h3>Volunteer Opportunities</h3>
    			<p>
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br></del>
-				Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br>
-				<a href="https://docs.google.com/forms/d/e/1FAIpQLSd13Qf_CkBDlj2qlT7ZL9jhuK_BVGzCpWSbzaVtlXBL8aBEVA/viewform?usp=sf_link">Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16<br></a>
+				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br></del>
+				Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16<br>
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLScj6TGPECQUY2TwlA6YTWfgY9QBPgrjifZuzSoRbaSLdByc4Q/viewform?usp=sf_link">Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)</a><br>
    				<a href="https://docs.google.com/forms/d/e/1FAIpQLScamGJxFOKkcg1rVG-7LE1uikwRNok74QBUCVox35LNaLMaJg/viewform?usp=sf_link">Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14</a><br>
    			</p>
