--- a/index.html
+++ b/index.html
@@ -179,10 +179,13 @@
    			<p>	President - Tommy<br>
 				Vice President - Liberty<br>
 				Treasurer - Kenneth<br>
-				ICC - Crisitian <br>
+				ICC - Crisitian<br>
+				Secretary - Derrick<br>
 				<br>
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Run for Office</a><br>
 				<br>
+				Advisor - <a href = "http://www.kbcheney.com/physics/teachers/cheney/">Professor Cheney</a><br>
+				Advisor - Professor Watkins<br>
    		</div>
 
    	</div>
