--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br></del>
 				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br></del>
 				Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16<br>
-				<a href="https://docs.google.com/forms/d/e/1FAIpQLScj6TGPECQUY2TwlA6YTWfgY9QBPgrjifZuzSoRbaSLdByc4Q/viewform?usp=sf_link">Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)</a><br>
-   				<a href="https://docs.google.com/forms/d/e/1FAIpQLScamGJxFOKkcg1rVG-7LE1uikwRNok74QBUCVox35LNaLMaJg/viewform?usp=sf_link">Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14</a><br>
+				Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)<br>
+   				Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14<br>
    			</p>
 
    			<ul class="info-list">
