--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/AstronomyandPhysicsClubPCC"><i class="fa fa-facebook"></i></a></li>
-         <!-- <li><a href=""><i class="fa fa-behance"></i></a></li> -->
          <li><a href="https://www.twitter.com/pccastronomy"><i class="fa fa-twitter"></i></a></li>
          <li><a href="http://www.instagram.com/AstronomyandPhysicsClubPCC"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
@@ -133,7 +132,7 @@
    			<p>
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br></del>
 				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br></del>
-				Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16<br>
+				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16<del><br>
 				Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)<br>
    				Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14<br>
    			</p>
