--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
    				enrich the lives of Pasadena City College's students, our local community and our selves by providing these resources and experiences.</p>
    				
 				Affiliates: <br>
-				<a href="https://nightsky.jpl.nasa.gov/"><img src="NSNroundlogo.jpeg" alt="Night Sky Network" style="width:50px;height:50px;"></a>    <a href="https://www.astrosociety.org/"><img src="ASPlogo.png" alt="Astronomy Society of the Pacific" style="width:50px;height:50px;"></a><br>
-				<br>
+				<right><a href="https://nightsky.jpl.nasa.gov/"><img src="NSNroundlogo.jpeg" alt="Night Sky Network" style="width:80px;height:80px;"></a>    <a href="https://www.astrosociety.org/"><img src="ASPlogo.png" alt="Astronomy Society of the Pacific" style="width:80px;height:80px;"></a><br>
+				</right><br>
 			</div>   			
 
    		</div>   		
