--- a/index.html
+++ b/index.html
@@ -209,9 +209,18 @@
    		<div class="col-twelve">
    			<a href="http://csthorn.com/physics" title="Join Now!" class="button button-primary">Join Now!</a>
    			<a href="https://docs.google.com/document/d/1ZX5Pj8zBY_d_99axz9n5t8RVaze7_oHsskOE3dUL3KA/edit" title="View Tesla Coil Project Notes" class="button button-primary">Tesla Coil Updates</a>
-   		<br>
-		<br>
-		<br>
+			<br>
+			<br>
+			<br>
+			<center><h3>Benefits of Membership</h3></center>
+			<p>
+				Free and open to all PCC students. Get on the mailinglist updates on club events and local physics and astronomy events. 
+				Join the mand volunteers opportunities, field trips and create or participate in fun physics experiements. Be part of
+				an open minded group of like minded individuals who are interested in the topics regardless of experience.
+			</p>
+			<br>
+			<br> 
+			<br>
 		</div>   		
    	</div>
    </section> <!-- /join--> 
