--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
 			<br>
 			<br>
 			<center><h3>Benefits of Membership</h3></center>
-			<p>
-				Free and open to all PCC students. Get on the mailinglist updates on club events and local physics and astronomy events. 
-				Join the mand volunteers opportunities, field trips and create or participate in fun physics experiements. Be part of
-				an open minded group of like minded individuals who are interested in the topics regardless of experience.
+			<p class="lead">
+				<center>Free and open to all PCC students.<br></center>
+				Be part of an open minded group of like minded individuals. Receive updates on club events, guest speakers (from Caltech and Great Magallen Telescope),
+				local physics and astronomy events. Be able to participate in the many volunteers opportunities and field trips. Create or participate in fun physics experiements. 
 			</p>
 			<br>
 			<br> 
