--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 				Treasurer - Kenneth<br>
 				ICC - Crisitian<br>
 				Secretary - Derrick<br>
+				Event Coordinator - Steven<br>
 				<br>
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Run for Office</a><br>
 				<br>
