--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br></del>
 				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br></del>
 				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16</del><br>
-				Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)<br>
-   				Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14<br>
+				<del>Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)</del><br>
+				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14</del><br>
    			</p>
 
    			<ul class="info-list">
