--- a/index.html
+++ b/index.html
@@ -125,20 +125,31 @@
    	<div class="row about-content">
 
    		<div class="col-six tab-full">
-
+			
+			<h3>Talks</h3>
+			<p>
+			Condense Matter Physics (Introduction) by Junyi Shan - March 19<br />
+			From PCC to JPL-My Condense Matter Physics Research that landed me a JPL Job-Simon Huytvuong - March 26<br />
+			Giant Magellen Telescope by Dr. Rafael Millan-Gabet - April 30<br />
+			(See Calender for Most Updated Schedule)
+			</p>
+				
    			<h3>Events</h3>
    			<p>
-				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br>
-				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br>
+				Science for March-March 16, 2019-10am-1pm (tentative)<br />
+				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br />
+				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br />
    				<br>
    			</p>
    			<h3>Volunteer Opportunities</h3>
    			<p>
-				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br></del>
-				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br></del>
-				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16</del><br>
-				<del>Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)</del><br>
-				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14</del><br>
+				Caltech Science for March Booth-March 16, 2019 9am-1:40pm (tentative)<br />
+				
+				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br /></del>
+				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br /></del>
+				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16</del><br />
+				<del>Astronomy on Tap-General Volunteer-Dec. 3 (Abigail is giving a talk)</del><br />
+				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Dec. 14</del><br />
    			</p>
 
    			<ul class="info-list">
@@ -158,9 +169,9 @@
    		<div class="col-six tab-full">
 
    			<h3>Meetings</h3>
-   			<p>Days: Every Tuesday<br>
-   			   Time: 12pm-1pm<br>
-   			   Location: E 311 (Physics room next to library)<br></p>
+   			<p>Days: Every Tuesday<br />
+   			   Time: 12pm-1pm<br />
+   			   Location: E 311 (Physics room next to library)<br /></p>
 
    			<h3>Projects</h3>
    			<p>	
@@ -179,12 +190,14 @@
 			
 			
 			<h3>Officers</h3>
-   			<p>	President - Tommy<br>
-				Vice President - Liberty<br>
-				Treasurer - Kenneth<br>
-				ICC - Crisitian<br>
-				Secretary - Derrick<br>
-				Event Coordinator - Steven<br>
+   			<p>	President - Steven<br />
+				Vice President - Liberty<br />
+				Treasurer - Kenneth<br />
+				ICC - Open<br />
+				Research Laison - Cristian <br />
+				Secretary - open<br />
+				Event Coordinator - open<br />
+				Webdeveloper - open<br />
 				<br>
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Run for Office</a><br>
 				<br>
