--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
    			<h1>Meetings & Public Events</h1><br>
    	<!--Google Calendar -->
 			<a href="calendar.html"><u>View in Browser</u></a><br>
-   	<center><iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=pcc.astronomy.and.physics.club%40gmail.com&amp;color=%231B887A&amp;src=1vuo94jeu0mmhh20r46vte4o7o%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ugpcsdc6n5oucf7jh96hk5hlc8%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="600" height="500" frameborder="0" scrolling="no"></iframe>
+   	<center><iframe src="https://calendar.google.com/calendar/embed?title=Astronomy%20and%20Physics%20Club%20Calendar&amp;showTitle=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=pcc.astronomy.and.physics.club%40gmail.com&amp;color=%231B887A&amp;src=1vuo94jeu0mmhh20r46vte4o7o%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ul9ufd47jmf92frnr92s895te4%40group.calendar.google.com&amp;color=%23AB8B00&amp;src=ht3jlfaac5lfd6263ulfh4tql8%40group.calendar.google.com&amp;color=%23333333&amp;src=ugpcsdc6n5oucf7jh96hk5hlc8%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="600" height="500" frameborder="0" scrolling="no"></iframe>
 		<pr>Calendar Key: <h4 style="color: #66ffcc">Blue: Club meetings & club business. </h4> <h4 style="color: #ff0066">Red: Club Activities </h4> <h4 style="color: #6600cc">Purple: Local Public Astronomy/Physics Events</h4></pr>
-			</center><br><br>
+			</center><br /><br />
 			</div>
 		</div>
 
