--- a/index.html
+++ b/index.html
@@ -193,11 +193,10 @@
    			<p>	President - Steven<br />
 				Vice President - Liberty<br />
 				Treasurer - Kenneth<br />
-				ICC - Open<br />
-				Research Laison - Cristian <br />
-				Secretary - open<br />
-				Event Coordinator - open<br />
-				Webdeveloper - open<br />
+				ICC - Cristian<br />
+				Secretary - Auzin<br />
+				Event Coordinator - Paul<br />
+				Project Coordinator - John<br />
 				<br>
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Run for Office</a><br>
 				<br>
