--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
 				Vice President - Liberty<br />
 				Treasurer - Kenneth<br />
 				ICC - Cristian<br />
-				Secretary - Auzin<br />
+				Secretary - Aung<br />
 				Event Coordinator - Paul<br />
 				Project Coordinator - John<br />
-				<br>
+				<br />
 				<a href="https://docs.google.com/forms/d/e/1FAIpQLScRTTnnjHxHrhhDNKfRV-EJRdFVutAN_rYW2bJ_1D2C4HeZ5g/viewform?usp=sf_link">Run for Office</a><br>
 				<br>
 				Advisor - <a href = "http://www.kbcheney.com/physics/teachers/cheney/">Professor Cheney</a><br>
