--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 			<h3>Talks</h3>
 			<p>
 			Condense Matter Physics (Introduction) by Junyi Shan - March 19<br />
-			From PCC to JPL-My Condense Matter Physics Research that landed me a JPL Job-Simon Huytvuong - March 26<br />
-			Giant Magellen Telescope by Dr. Rafael Millan-Gabet - April 30<br />
+			From PCC to JPL with my Condense Matter Physics Research-Simon Huytvuong - March 26<br />
+			Giant Magellan Telescope by Dr. Rafael Millan-Gabet - April 30<br />
 			(See Calender for Most Updated Schedule)
 			</p>
 				
