--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 			
 			<h3>Talks</h3>
 			<p>
-			Condense Matter Physics (Introduction) by Junyi Shan - March 19<br />
-			From PCC to JPL with my Condense Matter Physics Research-Simon Huytvuong - March 26<br />
-			Giant Magellan Telescope by Dr. Rafael Millan-Gabet - April 30<br />
+			<b>(Introduction) Condense Matter Physics </b> by Junyi Shan - March 19<br /><br />
+			<b>From PCC to JPL with my Condense Matter Physics Research </b>-Simon Huytvuong - March 26<br /><br />
+			<b>Giant Magellan Telescope </b> by Dr. Rafael Millan-Gabet - April 30<br /><br />
 			(See Calender for Most Updated Schedule)
 			</p>
 				
