--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, Worlds.</h5>
+	   			<h5>Hello Worlds.</h5>
 	   			 <h1><font face="helvetica" size="11" color = "#ffffff">We are the Astronomy and Physics Club.</h1></font>
 
 	   			<p class="intro-position">
