--- a/index.html
+++ b/index.html
@@ -129,10 +129,13 @@
 			<h3>Talks</h3>
 			<p>
 			<b>(Introduction) Condense Matter Physics </b> by Junyi Shan - March 19<br /><br />
-			<b>From PCC to JPL with my Condense Matter Physics Research </b>-Simon Huytvuong - March 26<br /><br />
+			<b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huytvuong - March 26<br /><br />
+			
+			
 			<b>Giant Magellan Telescope </b> by Dr. Rafael Millan-Gabet - April 30<br /><br />
 			(See Calender for Most Updated Schedule)
 			</p>
+			<a href="https://docs.google.com/document/d/1480yh70A_809tIaoM-_pH33inRtVO16Oj_v3IxymsZs/edit#">More about the speakers.</a>
 				
    			<h3>Events</h3>
    			<p>
