--- a/index.html
+++ b/index.html
@@ -131,19 +131,18 @@
 			<b>(Introduction) Condense Matter Physics </b>- by Junyi Shan - March 19<br /><br />
 			<b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26<br /><br />
 			<b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Jake Hartman - April 2<br /><br />
-			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>-by Howard Hui - April 9<br />
-			<b>Life in Graduate School</b> David Huynh- April 23** Tentative <br />
-			<b>Quantum Mechanics</b>-by Erika Ye - May 15 (Tentative)<br />
+			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>-by Howard Hui - April 9<br /><br />
+			<b>Life in Graduate School</b> David Huynh- April 23** Tentative <br /><br />
+			<b>Quantum Mechanics</b>-by Erika Ye - May 15 (Tentative)<br /><br />
 			<b>Giant Magellan Telescope </b> by Dr. Rafael Millan-Gabet - April 30<br /><br />
-			(See Calender for Most Updated Schedule)
-			<br />
+			(See Calender for Most Updated Schedule)<br />
 		        <a href="https://docs.google.com/document/d/1480yh70A_809tIaoM-_pH33inRtVO16Oj_v3IxymsZs/edit#">More about the speakers.</a>
 			<br />
 			</p>
 			
    			<h3>Events</h3>
    			<p>
-				Science for March-March 16, 2019-10am-1pm (tentative)<br />
+				Science for March-March 16, 2019 - 10am-1pm <br />
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br />
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br />
    				<br>
