--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 			<p>
 			<b>(Introduction) Condense Matter Physics </b>- by Junyi Shan - March 19<br /><br />
 			<b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26<br /><br />
-			<b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Jake Hartman - April 2<br /><br />
-			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>-by Howard Hui - April 9<br /><br />
-			<b>Life in Graduate School</b> David Huynh- April 23** Tentative <br /><br />
+			<b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2<br /><br />
+			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>- by Dr. Howard Hui - April 9<br /><br />
+			<b>Life in Graduate School</b> - by David Huynh- April 23** Tentative <br /><br />
 			<b>Quantum Mechanics</b>-by Erika Ye - May 15 (Tentative)<br /><br />
 			<b>Giant Magellan Telescope </b> by Dr. Rafael Millan-Gabet - April 30<br /><br />
 			(See Calender for Most Updated Schedule)<br />
