--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
    			<p>Days: Every Tuesday<br />
    			   Time: 12pm-1pm<br />
    			   Location: E 311 (Physics room next to library)<br /></p>
+			
+			>>> <a href="https://docs.google.com/presentation/d/1wX0UbdIAoLFgWNMIeqBps7kwGxAh6GvBjIbuHKaAzlA/edit?usp=sharing"Informational First Meeting Slides</a> <<<
 
 			<h3>Events</h3>
    			<p>
