--- a/index.html
+++ b/index.html
@@ -170,10 +170,11 @@
    			<h3>Meetings</h3>
    			<p>Days: Every Tuesday<br />
    			   Time: 12pm-1pm<br />
-   			   Location: E 311 (Physics room next to library)<br /></p>
+   			   Location: E 311 (Physics room next to library)<br />
+			   >>> <a href="https://docs.google.com/presentation/d/1wX0UbdIAoLFgWNMIeqBps7kwGxAh6GvBjIbuHKaAzlA/edit?usp=sharing">Informational First Meeting Slides</a> <<<
+			</p>
 			
-			>>> <a href="https://docs.google.com/presentation/d/1wX0UbdIAoLFgWNMIeqBps7kwGxAh6GvBjIbuHKaAzlA/edit?usp=sharing">Informational First Meeting Slides</a> <<<
-
+			
 			<h3>Events</h3>
    			<p>
 				Science for March-March 16, 2019 - 10am-1pm <br />
