--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26<br /><br />
 			<b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2<br /><br />
 			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>- by Dr. Howard Hui - April 9<br /><br />
-			<b>Life in Graduate School</b> - by David Huynh- April 23** Tentative <br /><br />
+			<b>Life in Graduate School</b> - by David Huynh- April 23 (Tentative)<br /><br />
 			<b>Giant Magellan Telescope </b> by Dr. Rafael Millan-Gabet - April 30<br /><br />
 			<b>Quantum Mechanics</b>-by Erika Ye - May 15 (Tentative)<br /><br />
 			(See Calender for Most Updated Schedule)<br />
@@ -142,8 +142,8 @@
 			
    			<h3>Volunteer Opportunities</h3>
    			<p>
-				Caltech Science for March Booth-March 16, 2019 9am-1:40pm (tentative)<br />
-				
+				<a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm <br />
+				<br />
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2<br /></del>
 				<del>Caltech Astronomy on Tap at Der Wolfskopf-Nov. 5<br /></del>
 				<del>Caltech Star Gazing Lecture-Telescope Volunteer-Nov. 16</del><br />
@@ -177,10 +177,10 @@
 			
 			<h3>Events</h3>
    			<p>
-				Science for March-March 16, 2019 - 10am-1pm <br />
+				<a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm <br /><br />
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br />
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br />
-   				<br>
+   				<br />
    			</p>
 			
    			<h3>Projects</h3>
