--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 			
 			<h3>Talks</h3>
 			<p>
-			<b>(Introduction) Condense Matter Physics </b>- by Junyi Shan - March 19<br /><br />
+			<b>When we cannot find a particle in the universe, so we go to solids.</b>- by Junyi Shan - March 19<br /><br />
 			<b>From PCC to JPL with my Condense Matter Physics</b>- by Simon Huy T Vuong - March 26<br /><br />
 			<b>The Dynamic Sky of Low-Frequency Radio Astronomy</b>- by Dr. Jake Hartman - April 2<br /><br />
 			<b>Cosmology from the bottom of the Earth: Telescopes at the South Pole</b>- by Dr. Howard Hui - April 9<br /><br />
 			<b>Life in Graduate School</b> - by David Huynh- April 23 (Tentative)<br /><br />
-			<b>Giant Magellan Telescope </b> by Dr. Rafael Millan-Gabet - April 30<br /><br />
-			<b>Quantum Mechanics</b>-by Erika Ye - May 15 (Tentative)<br /><br />
+			<b>Giant Magellan Telescope </b>- by Dr. Rafael Millan-Gabet - April 30<br /><br />
+			<b>Matrix Product States for Quantum Many-Body Systems</b>-by Erika Ye - May 15 (Tentative)<br /><br />
 			(See Calender for Most Updated Schedule)<br />
 		        <a href="https://docs.google.com/document/d/1480yh70A_809tIaoM-_pH33inRtVO16Oj_v3IxymsZs/edit#">More about the speakers.</a>
 			<br />
