--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
    			<h3>Meetings</h3>
    			<p>Days: Every Tuesday<br />
-   			   Time: 12pm-1pm<br />
+   			   Time: 12-1pm<br />
    			   Location: E 311 (Physics room next to library)<br />
 			   >>> <a href="https://docs.google.com/presentation/d/1wX0UbdIAoLFgWNMIeqBps7kwGxAh6GvBjIbuHKaAzlA/edit?usp=sharing">Informational First Meeting Slides</a> <<<
 			</p>
@@ -177,7 +177,8 @@
 			
 			<h3>Events</h3>
    			<p>
-				<a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm <br /><br />
+				JPL Open House on May 18, 19 - <a href="https://www.jpl.nasa.gov/events/special-events.php">Sign Up by April 7</a>!<br />
+				<del><a href="http://scienceformarch.sites.caltech.edu/schedule">Caltech Science for March Booth</a>-March 16, 2019 9am-1:40pm </del><br /><br />
 				<del>Caltech Cosmology Lab Tour with Abigail Crities-Oct. 26, 2018</del><br />
 				<del>Noche de Ciencias booth hosted by SHPE-Nov. 2, 2018</del><br />
    				<br />
